# YojanaConnect

./: README.md  config.py  main.py  pyproject.toml  render.yaml  requirements.txt  vercel.json
Auth/: auth.py  functions.py
Dashboard/Profile/: profile.py
Dashboard/Scheme/: functions.py  qna_agent.py  scheme.py  score_agent.py
Database/Engine/: __init__.py
Database/ORM_Models/: auth_models.py  criteria_models.py  profile_models.py  scheme_models.py  token_models.py
Database/VectorDB/: qdrant_db.py
Http_Exceptions/: exceptions.py
auth/: __init__.py  jwt_service.py
constants/: demodata.py
routes/: ProfileRouter.py  __init__.py
utilities/: http_exceptions.py  response_emitter.py
